# umdevaudio

./: Makefile  Makefile.am  README  README.md  TODO  VirtualSuite  configure.ac  default.conf
docs/: .Tutorial.tex.swn  .Tutorial.tex.swo  .Tutorial.tex.swp  TODO  Tutorial.aux  Tutorial.dvi  Tutorial.tex
umdevaudio/: Makefile.am  pcm_aux.c  pcm_aux.h  snd.c  snd.h  snd_transfer_functions.c  snd_transfer_functions.h  umdevctl.c  umdevpcm.c
umdevaudio/.deps/: umdevctl.Plo
umdevaudio/.libs/: umdevaudio.la  umdevaudio.lai  umdevaudio.soT
