include $(top_srcdir)/modules-common.mk

mod_LTLIBRARIES = umdevaudioCtl.la umdevaudioPcm.la

umdevaudioPcm_la_SOURCES = umdevpcm.c snd.c snd.h pcm_aux.c pcm_aux.h snd_transfer_functions.c snd_transfer_functions.h

umdevaudioCtl_la_SOURCES = umdevctl.c snd.c snd.h snd_transfer_functions.c snd_transfer_functions.h

